build_files/test/lib/error/sources/externs.c
/*
** EPITECH PROJECT, 2026
** EpitechBase - externs.c
** File description:
** <description>
*/

#include "error.h"

const error_list_t err = {
};